updated the API and documentation
