# app/Http/Controllers/API/V1/EnrolmentController.php
@@ -26,57 +26,47 @@ class EnrolmentController extends Controller
         $this->enrolment = $enrolment;
     }
 
-    /**
-     * @OA\Post(
-     *     path="/api/v1/enrolments",
-     *     summary="Create a new enrolment record for a user in a specific course.",
-     *     @OA\RequestBody(
-     *         required=true,
-     *         
-     *     ),
-     *     @OA\Response(response="200", description="Enrolment created successfully")),
-     * )
-     */
-    public function create(Request $request)
-    {
-        $request->validate([
-            'user_id' => 'required|exists:users,id',
-            'course_id' => 'required|exists:courses,id',
-        ]);
-
-        $enrolment = Enrolment::create($request->all());
-
-        return response()->json(['message' => 'Enrolment created successfully', 'data' => new EnrolmentResource($enrolment)]);
-    }
+   
 	
 	/**
      * @OA\Post(
-     *     path="/api/v1/enrolments/store",
+     *     path="/api/v1/enrolment/add",
      *     summary="Create a new enrolment record with uniqueness validation.",
-     *     @OA\RequestBody(
+     *     @OA\Parameter(
+     *         name="user_id",
+     *         in="path",
      *         required=true,
-     *         
+     *         description="user_id",
+     *         @OA\Schema(type="integer")
+     *     ),
+     *       @OA\Parameter(
+     *         name="course_id",
+     *         in="path",
+     *         required=true,
+     *         description="course_id",
+     *         @OA\Schema(type="integer")
      *     ),
      *     @OA\Response(response="200", description="Enrolment created successfully")),
      * )
      */
-	public function store(Request $request)
-	{
+	public function create(Request $request)
+	{  
 		$request->validate([
 			'user_id' => [
 				'required',
 				'exists:users,id',
-				Rule::unique('enrolments')->where(function ($query) use ($request) {
+				Rule::unique('course_user')->where(function ($query) use ($request) {
 					return $query->where('user_id', $request->user_id)
 						->where('course_id', $request->course_id);
 				}),
 			],
 			'course_id' => 'required|exists:courses,id',
 		]);
-
+       
+        
 		try {
 			$enrolment = Enrolment::create($request->all());
-			return new EnrolmentResource($enrolment);
+			return response()->json(['message' => 'Enrolment created successfully', 'data' => new EnrolmentResource($enrolment)]);
 		} catch (\Exception $e) {
 			return response()->json(['message' => 'Error creating enrolment', 'error' => $e->getMessage()], 500);
 		}
@@ -85,7 +75,7 @@ class EnrolmentController extends Controller
 
     /**
      * @OA\Put(
-     *     path="/api/v1/enrolments/{id}",
+     *     path="/api/v1/enrolment/edit",
      *     summary="Update the status of a user's enrolment (e.g., from active to completed).",
      *     @OA\Parameter(
      *         name="id",
@@ -94,28 +84,32 @@ class EnrolmentController extends Controller
      *         description="Enrolment ID",
      *         @OA\Schema(type="integer")
      *     ),
-     *     @OA\RequestBody(
+     *       @OA\Parameter(
+     *         name="status",
+     *         in="path",
      *         required=true,
-     *         @OA\JsonContent()
+     *         description="status completed or active",
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Response(response="200", description="Enrolment updated successfully"),
    
      * )
      */
-    public function update(Request $request, $id)
+    public function update(Request $request)
     {
 		
         $request->validate([
             'status' => 'required|in:active,completed',
         ]);
 
-        $enrolment = Enrolment::find($id);
+        $enrolment = Enrolment::find($request->id);
 
         if (!$enrolment) {
             return response()->json(['message' => 'Enrolment not found'], 404);
         }
 
-        $enrolment->update(['status' => $request->status]);
+        $enrolment->status = $request->status;
+        $enrolment->save();
 
         return response()->json(['message' => 'Enrolment updated successfully', 'data' => new EnrolmentResource($enrolment)]);
     }
@@ -123,37 +117,37 @@ class EnrolmentController extends Controller
 	
 	/**
      * @OA\Get(
-     *     path="/api/v1/enrolments/{id}",
+     *     path="/api/v1/enrolment/details",
      *     summary="Retrieve details of a specific user's enrolment in a course.",
      *     @OA\Parameter(
-     *         name="id",
-     *         in="path",
-     *         required=true,
-     *         description="Enrolment ID",
+     *         name="user_id",
+     *         in="query",
+     *         description="User ID",
      *         @OA\Schema(type="integer")
      *     ),
      *     @OA\Response(response="200", description="Enrolment details")),
     * )
      */
-	public function show($id)
+	public function show(Request $request)
 	{
 		// Retrieve the enrolment with related user and course using eager loading
-		$enrolment = $this->enrolment->with('user', 'course')->find($id);
+		$enrolment = $this->enrolment->with('user', 'course')->where('user_id', $request->user_id)->get();
 
 		// Check if the enrolment was not found
 		if (!$enrolment) {
 			// Return a JSON response with a 404 status code and a message
-			return response()->json(['message' => 'Enrolment course not found'], 404);
+			return response()->json(['message' => 'Enrolment course not found for the user'], 404);
 		}
+        
 
 		// Transform the enrolment data using the EnrolmentResource
-		return new EnrolmentResource($enrolment);
+		return EnrolmentResource::collection($enrolment);
 	}
 
 
 	 /**
      * @OA\Get(
-     *     path="/api/v1/enrolments/list",
+     *     path="/api/v1/enrolment/list",
      *     summary="Retrieve a list of all enrolments for a specific course or all enrolments for a specific user.",
      *     @OA\Parameter(
      *         name="course_id",
@@ -173,12 +167,10 @@ class EnrolmentController extends Controller
 	public function listEnrolments(Request $request)
 	{
 		if ($request->has('course_id')) {
-			$enrolments = Enrolment::where('course_id', $request->course_id)->get();
-		} elseif ($request->has('user_id')) {
-			$enrolments = Enrolment::where('user_id', $request->user_id)->get();
-		} else {
-			$enrolments = Enrolment::all();
-		}
+	        $enrolments = $this->enrolment->with('user', 'course')->where('course_id', $request->course_id)->get();
+        } elseif ($request->has('user_id')) {
+		    $enrolments = $this->enrolment->with('user', 'course')->where('user_id', $request->user_id)->get();
+       } 
 
 		return EnrolmentResource::collection($enrolments);
 	}
