# storage/api-docs/api-docs.json
@@ -5,15 +5,25 @@
         "version": "0.1"
     },
     "paths": {
-        "/api/v1/enrolments": {
-            "get": {
-                "summary": "Display a paginated list of enrolments.",
-                "operationId": "4bd43fb857de261110826ba82c3c3b9a",
+        "/api/v1/enrolment/add": {
+            "post": {
+                "summary": "Create a new enrolment record with uniqueness validation.",
+                "operationId": "b3996fc47107f7ebdb596968a8247c5b",
                 "parameters": [
                     {
-                        "name": "per_page",
-                        "in": "query",
-                        "description": "Number of items to display per page",
+                        "name": "user_id",
+                        "in": "path",
+                        "description": "user_id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "course_id",
+                        "in": "path",
+                        "description": "course_id",
+                        "required": true,
                         "schema": {
                             "type": "integer"
                         }
@@ -21,47 +31,51 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Paginated list of enrolments"
-                    }
-                }
-            },
-            "post": {
-                "summary": "Create a new enrolment record for a user in a specific course.",
-                "operationId": "76b754bbdcc53c394526b86f3a197058",
-                "requestBody": {
-                    "required": true
-                },
-                "responses": {
-                    "200": {
                         "description": "Enrolment created successfully"
                     }
                 }
             }
         },
-        "/api/v1/enrolments/store": {
-            "post": {
-                "summary": "Create a new enrolment record with uniqueness validation.",
-                "operationId": "13300b0f06a130221b28818c4ba3ed68",
-                "requestBody": {
-                    "required": true
-                },
-                "responses": {
-                    "200": {
-                        "description": "Enrolment created successfully"
-                    }
-                }
-            }
-        },
-        "/api/v1/enrolments/{id}": {
-            "get": {
-                "summary": "Retrieve details of a specific user's enrolment in a course.",
-                "operationId": "c96159bf9798da86434fc238d5f69749",
+        "/api/v1/enrolment/edit": {
+            "put": {
+                "summary": "Update the status of a user's enrolment (e.g., from active to completed).",
+                "operationId": "2f38ad9d8c84e615bfe62b27ba2c46f4",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
                         "description": "Enrolment ID",
                         "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "status",
+                        "in": "path",
+                        "description": "status completed or active",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Enrolment updated successfully"
+                    }
+                }
+            }
+        },
+        "/api/v1/enrolment/details": {
+            "get": {
+                "summary": "Retrieve details of a specific user's enrolment in a course.",
+                "operationId": "43f73a1a947ca49a3a4743c9603f6852",
+                "parameters": [
+                    {
+                        "name": "user_id",
+                        "in": "query",
+                        "description": "User ID",
                         "schema": {
                             "type": "integer"
                         }
@@ -72,40 +86,12 @@
                         "description": "Enrolment details"
                     }
                 }
-            },
-            "put": {
-                "summary": "Update the status of a user's enrolment (e.g., from active to completed).",
-                "operationId": "555c599ac8c5f7a221c790ab25413d29",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Enrolment ID",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {}
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Enrolment updated successfully"
-                    }
-                }
             }
         },
-        "/api/v1/enrolments/list": {
+        "/api/v1/enrolment/list": {
             "get": {
                 "summary": "Retrieve a list of all enrolments for a specific course or all enrolments for a specific user.",
-                "operationId": "852e42452ccb436131e31a553f9dd038",
+                "operationId": "d3d0fc51ae66ed0022b833f6952e39c5",
                 "parameters": [
                     {
                         "name": "course_id",
@@ -127,6 +113,27 @@
                 "responses": {
                     "200": {
                         "description": "List of enrolments"
+                    }
+                }
+            }
+        },
+        "/api/v1/enrolments": {
+            "get": {
+                "summary": "Display a paginated list of enrolments.",
+                "operationId": "4bd43fb857de261110826ba82c3c3b9a",
+                "parameters": [
+                    {
+                        "name": "per_page",
+                        "in": "query",
+                        "description": "Number of items to display per page",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Paginated list of enrolments"
                     }
                 }
             }
